<resources>
    <string name="app_name">AndroidTutorial</string>
    <string name="greating">Wellcome to Android !</string>
    <string name="searchFieldText">Enter search input!</string>
    <string name="messageActivity">Message Activity</string>
    <string name="finalActivityMessage">Welcome to Final Activity</string>
    <string name="finalButtonText">Final Activity</string>
    <string name="fragmentActivit">Fragment</string>
    <string name="vertivalFragmentLabel">Fragement potrait</string>
    <string name="articleFragmentLabel">Article Fragment</string>
    <string name="headFragment">Head line Fragment</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="dynFragmentLabel">Dyn. Fragment</string>
    <string name="homeFragmentLabel">Home Fragment</string>
    <string name="homSecFragmentLabel">Home second Fragment</string>
    <string name="homeThirdFragmentLabel">Home third Fragment</string>
    <!--Preference-->
    <string name="login_preference">AndroidTutorial_login_preference</string>
    <string name="login_status_preference">AndroidTutorial_login_status_preference</string>
    <string name="preferenceLabelText">PreferenceAPI</string>
    <string name="loginLabelText">Login</string>
    <string name="user_name">son</string>
    <string name="user_pwd">son</string>
    <string name="logOutText">Logout</string>
    <string name="sqlLiteLabel">SQLLite</string>
    <string name="addContactText">Add Contact</string>
    <string name="viewContact">View Contact</string>
    <string name="updateContact">Update Contact</string>
    <string name="deleteContact">Delete Contact</string>
    <string name="addNewContactText">Add new contact</string>
    <string name="roomDBText">RoomDB</string>
    <string name="roomDBLabel">Room DB</string>
    <string name="addUserButtonText">Add User</string>
    <string name="viewUserButtonText">View User</string>
    <string name="updateUserButtonText">Update User</string>
    <string name="deleteUserButtonText">Delete User</string>
    <string name="recyclerViewText">Recycler View</string>
    <string name="recyclerImageViewLabel">Image Recyler View</string>
    <string name="picDescription1">Anh 1 cua Ha noi</string>

    <string-array name="countries">

        <item>Deutschland</item>
        <item>Österreich</item>
        <item>Italien</item>
        <item>Ungarn</item>
        <item>Slovakia</item>
        <item>Slovenia</item>
        <item>Croatia</item>
        <item>Belgium</item>
        <item>Holland</item>
        <item>Sweden</item>
        <item>Norway</item>
        <item>Finland</item>
        <item>China</item>
    </string-array>

</resources>
